k8s/extras - production - ready/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yesonit-accessmanager
  namespace: yesonit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yesonit-accessmanager
  template:
    metadata:
      labels:
        app: yesonit-accessmanager
    spec:
      containers:
      - name: yesonit
        image: josabana/yesonit-accessmanager:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
