k8s/extras - production - ready/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yesonit-ingress
  namespace: yesonit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yesonit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yesonit-accessmanager-service
            port:
              number: 3000
